# StackOverflowSurveyRes

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
Pyscripts/: .env  foreignkeys.py  main.py  requirements.txt  topcountrieslang.sql  tosql.py  tousd.py
Rawdata/: survey_results_schema.csv.xlsx
app/: streamlit_app.py
data/raw/2022/: kaggle_dataset.json
data/raw/2023/: kaggle_dataset.json
data/raw/2025/: kaggle_dataset.json
docs/: data-hygiene.md  multi-year-data.md  streamlit-dashboard.md
stackoverflow_analytics/: __init__.py  config.py  dashboard_data.py  kaggle_data.py  main.py  multiyear_eda.py  pipeline.py  tousd.py  validate.py
tests/: test_cleaning.py  test_config.py  test_dashboard_data.py  test_manifest.py  test_multiyear_eda.py  test_salary.py  test_streamlit_app.py  test_validation.py
