[project]
name = "stackoverflow-analytics"
version = "0.1.0"
description = "ETL and Streamlit analytics for Stack Overflow Developer Survey."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.3.2",
    "openpyxl==3.1.5",
    "pandas==2.3.1",
    "plotly==5.24.1",
    "streamlit==1.41.1",
    "xlsxwriter==3.2.5",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "ruff==0.12.7",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
testpaths = [
    "tests",
]


